# DioMe

./: Aula8_Analise_Exploratoria.ipynb  Desafio_Colab.ipynb  README.md
1-FormacaoPythonDeveloper/: estrutura_repeticao_while.py  tipos_de_dados.py  variaveis_constantes.py
1-FormacaoPythonDeveloper/01-FundamentosDePython/: Python Fundamentos.pptx  convertendo_tipos.py
1-FormacaoPythonDeveloper/01-FundamentosDePython/01-AmbienteDesenvovimentoPython/: print_input.py
1-FormacaoPythonDeveloper/01-FundamentosDePython/02-ConhecendoLinguagemPython/: convertendo_tipos.py
1-FormacaoPythonDeveloper/01-FundamentosDePython/03-TiposdeOperadoresPython/: atribuicao.py
1-FormacaoPythonDeveloper/01-FundamentosDePython/04-EstruturasCondicionaisRepeticaoPython/: estrutura_repeticao_for.py  identacao_blocos.py
1-FormacaoPythonDeveloper/01-FundamentosDePython/Desafios/: SistemaBancario.pptx  criarsistemabancario-v1.py
1-FormacaoPythonDeveloper/02-AprendendoEstruturasdeDadoscomPython/01-TrabalhandocomListasPython/: exemploListas.py
1-FormacaoPythonDeveloper/02-AprendendoEstruturasdeDadoscomPython/03-ExplorandoConjuntosPython/: 00-declarandoconjuntos.py
1-FormacaoPythonDeveloper/06-PraticandoDesenvolvimentoWebPython/63-ConsumindoApiDoTwiter/: .editorconfig  main.py  ola.py  pyproject.toml  secrets.py  setup.cfg
1-FormacaoPythonDeveloper/Desafios/: criarsistemabancario-v1.py  digitenumeroMesdicionario.py  tuitando-microblogtwiter.py
3-Nexa-DescubraNuemAWS/1-Descubra a Nuvem/: 11-As seis vantagens da Computação em Nuvem.docx  12-Criando sua Conta na AWS.docx
(+78 files in other folders)
